# rig-agents

./: .env.example  .gitignore  .windsurfrules   Cargo.toml  README.md
src/: main.rs  tools.rs
src/examples/: article_analyzer.rs  entities.rs  extractor.rs  flight_search_agent.rs  flight_search_tool.rs  rag.rs
src/tools/: embedder.rs  file.rs  searcher.rs
